<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/HomeScreenTitle"
        android:layout_width="258dp"
        android:layout_height="32dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="31dp"
        android:text="@string/homeScreenTitle"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/HomeScreenText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/HomeScreenText"
        android:layout_width="350dp"
        android:layout_height="0dp"
        android:layout_marginBottom="481dp"
        android:text="@string/homeScreenText"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/HomeScreenTitle" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="57dp"
        android:layout_marginStart="29dp"
        android:layout_marginEnd="29dp"
        android:text="@string/gettingStarted"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/HomeScreenText"
        app:layout_constraintVertical_bias="0.063" />
</androidx.constraintlayout.widget.ConstraintLayout>